--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 <body>
 
     <div class="preloader">
-        <img src="assets/images/loader.png" class="preloader__image" alt="">
+        <img src="assets/images/loader.png" class="preloader__image w-[100px] h-[100px] object-cover" alt="">
     </div><!-- /.preloader -->
 
     <div class="page-wrapper">
