--- a/product.html
+++ b/product.html
@@ -82,7 +82,7 @@
 <body>
 
     <div class="preloader">
-        <img src="assets/images/loader.png" class="preloader__image" alt="">
+        <img src="assets/images/loader.png" class="preloader__image max-w-[250px] h-auto" alt="">
     </div><!-- /.preloader -->
 
     <div class="page-wrapper">
