--- a/contact.html
+++ b/contact.html
@@ -195,7 +195,7 @@
                                 <h3>About</h3>
                             </div>
                             <div class="footer-widget_about_text">
-                                <p>We’d love to hear from you! Whether you have questions about our products, want to place an order, or just want to learn more about what we do feel free to reach out. At Earth Asia Agro, we’re always ready to help.</p>
+                                <p>We raise our animals with care, deliver fresh products daily, and stay true to our values in every step we take</p>
                             </div>
                             <form>
                                 <div class="footer_input-box">
