--- a/product.html
+++ b/product.html
@@ -186,8 +186,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <h4><a href="product-detail.html">tomatos</a></h4>
-                                            <p>$9.00</p>
+                                            <h4><a href="product-detail.html">Raw Beef</a></h4>
+
                                         </div>
                                     </div>
                                     <div class="col-xl-4 col-lg-4 col-md-6">
@@ -200,8 +200,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <h4><a href="product-detail.html">Chinese cabbage</a></h4>
-                                            <p>$4.99</p>
+                                            <h4><a href="product-detail.html">Pure Milk</a></h4>
+
                                         </div>
                                     </div>
                                     <div class="col-xl-4 col-lg-4 col-md-6">
@@ -214,8 +214,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <h4><a href="product-detail.html">Basket full of vegetables</a></h4>
-                                            <p>$9.98</p>
+                                            <h4><a href="product-detail.html">Farm Egg</a></h4>
+
                                         </div>
                                     </div>
                                     <div class="col-xl-4 col-lg-4 col-md-6">
@@ -228,8 +228,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <h4><a href="product-detail.html">Strawberry</a></h4>
-                                            <p>$2.99</p>
+                                            <h4><a href="product-detail.html">Live stock (Cow)</a></h4>
+
                                         </div>
                                     </div>
                                     <div class="col-xl-4 col-lg-4 col-md-6">
@@ -242,8 +242,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <h4><a href="product-detail.html">Green and red grape</a></h4>
-                                            <p>$6.00</p>
+                                            <h4><a href="product-detail.html">Live stock (Goat)</a></h4>
+
                                         </div>
                                     </div>
                                     <div class="col-xl-4 col-lg-4 col-md-6">
@@ -256,8 +256,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <h4><a href="product-detail.html">Split kiwi</a></h4>
-                                            <p>$5.98</p>
+                                            <h4><a href="product-detail.html">Chicken</a></h4>
+
                                         </div>
                                     </div>
                                 </div>
